now we have randomly generated trip ids that get pushed to the local db as well. It is tested and confirmed to work